<resources>
    <string name="app_name">YaTodo</string>
    <string name="todo_by_prefix">Deadline</string>
    <string name="input_text_placeholder">Enter your items description…</string>
    <string name="importance_default_menu_text">Default</string>
    <string name="importance_low_menu_text">Low</string>
    <string name="importance_high_menu_text">!! High</string>
    <string name="importance_title">Priority</string>
    <string name="importance_prefix_high">!!</string>
    <string name="importance_prefix_low">"\u2193"</string>
    <string name="importance_prefix_default">""</string>
    <string name="toolbar_title">My todo items</string>
    <string name="toolbar_subtitle">Completed - </string>
    <string name="show_completed_items">Show completed</string>
    <string name="sync_menu_text">Synchronize with server</string>
    <string name="login">Sign in</string>
    <string name="logout">Sign out</string>
    <string name="force_signin_message">You need to sing in to proceed</string>
    <string name="items_deleted_message">All items locally removed - sign-in again to load from server</string>
    <string name="server_error_message">Server error - try again later</string>
    <string name="network_online">Online mode</string>
    <string name="network_offline">Offline mode</string>
    <string name="back_online_msg">Connection restored</string>
    <string name="snack_refresh">Sync?</string>
    <string name="missing_permissions">Not enough permissions - closing the app</string>
    <string name="undo_delete">Item removed from todo list</string>
    <string name="options">Settings</string>
    <string name="theme_menu">Theme</string>
    <string name="theme_dark">Always dark</string>
    <string name="theme_light">Always light</string>
    <string name="theme_sys_default">System set</string>
    <string name="cancel_deletion">Cancel</string>
    <string name="autosync_menu_text">Auto-sync</string>
    <string name="back">Back</string>
    <string name="settings_title">Choose theme</string>
    <string name="cd_fab">Create new todo items</string>
    <string name="cd_cancel">Cancel and return to list of todo items</string>
    <string name="cd_save">Save todo item</string>
    <string name="cd_priority">Set priority - can be default, high, low</string>
    <string name="cd_datepicker">Choose deadline using calendar</string>
    <string name="cd_delete_current">Delete current todo item</string>
    <string name="cd_light">Always light theme</string>
    <string name="cd_dark">Always dark theme</string>
    <string name="cd_system_theme">Theme as in system</string>
    <string name="cd_complete">Mark todo item complete</string>
    <string name="cd_open">Open todo item to edit</string>
</resources>