<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/Theme.YaTodo.PopupOverlay"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:contentDescription="@string/cd_light"/>

        <RadioButton
            android:id="@+id/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:contentDescription="@string/cd_dark"/>

        <RadioButton
            android:id="@+id/system_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_sys_default"
            android:contentDescription="@string/cd_system_theme"/>
    </RadioGroup>


</LinearLayout>