<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.SecondFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_close"
        android:text="Закрыть"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:text="Сохранить"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/todo_input_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_close"

        android:hint="@string/input_text_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/todo_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/importance_clickable"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/todo_input_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/importance_title"/>

    <TextView
        android:id="@+id/importance_value"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/importance_clickable"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/importance_default_menu_text"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/importance_value"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/date_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@+id/divider_top"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/todo_by"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/date_switch"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/todo_by_prefix"/>

    <TextView
        android:id="@+id/todo_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/todo_by"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/todo_date"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:text="Удалить"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/divider_bottom"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>